        
        [After]
        void* (*new_stack_trace_raw)(SPVM_ENV* env, void* exception, const char* class_name, const char* method_name, int32_t line);
        void* (*new_stack_trace)(SPVM_ENV* env, void* exception, const char* class_name, const char* method_name, int32_t line);
        
0.9510_01  2021-04-14
        [CHANGE]
        * Support cast from class muldim array to interface muldim array
        * Support cast from class muldim array to callback muldim array
        * Add postfix type cast syntax
          
          $num->(string)
          
          This is same as
          
          (string)$num;
        * Improve field access error message.
        * Move compiler native APIs from env->compier_xxx to env->api->compiler->xxx.
          // Compiler API
          void* compiler_api = env->api->compiler;
          
          // New compiler
          void* compiler = compiler_api->new_compiler();
          
          // Compile SPVM
          int32_t status = compiler_api->compile_spvm(compiler, "MyClass");
          
          // Free compiler
          compiler_api->free_compiler(compiler);
        * Move the following native APIs to env->api->runtime->xxx.
          
          get_precompile_method_address
          set_native_method_address
          set_precompile_method_address
          get_method_id_without_signature
          get_method_id_without_signature
          get_constant_string_value

          // Runtime API
          void* runtime_api = env->api->runtime;
          
          // New runtime
          void* runtime = runtime_api->new_runtime();
          
          // Free runtime
          runtime_api->free_runtime(runtime);

        * Add SPVM::Document::NativeAPI::Compiler document.
        * Add SPVM::Document::NativeAPI::Runtime document.
        * Improve English syntax of error messages.
        [BUG FIX]
        * Fix the bug that dump weaken objects.
        * Fix the bug of isweak operator compile checking.
        