@@ -4363,7 +4363,7 @@ int32_t SPVM_API_call_spvm_method_vm(SPVM_ENV* env, int32_t method_id, SPVM_VALU
           const char* class_name = SPVM_API_RUNTIME_get_constant_string_value(env->runtime, method_class->name_id, NULL);
           
           // Exception stack trace
-          env->set_exception(env, env->new_stack_trace_raw(env, env->get_exception(env), class_name, method_name, line));
+          env->set_exception(env, env->new_stack_trace_raw(env, env->get_exception(env), method_id, line));
           opcode_rel_index = opcode->operand0;
           continue;
         }
@@ -4382,7 +4382,7 @@ int32_t SPVM_API_call_spvm_method_vm(SPVM_ENV* env, int32_t method_id, SPVM_VALU
           const char* class_name = SPVM_API_RUNTIME_get_constant_string_value(env->runtime, method_class->name_id, NULL);
 
           // Exception stack trace
-          env->set_exception(env, env->new_stack_trace_raw(env, env->get_exception(env), class_name, method_name, line));
+          env->set_exception(env, env->new_stack_trace_raw(env, env->get_exception(env), method_id, line));
           opcode_rel_index = opcode->operand0;
           continue;
         }
@@ -5741,9 +5741,13 @@ void SPVM_API_leave_scope(SPVM_ENV* env, int32_t original_mortal_stack_top) {
   env->native_mortal_stack_top = (void*)(intptr_t)original_mortal_stack_top;
 }
 
-SPVM_OBJECT* SPVM_API_new_stack_trace_raw(SPVM_ENV* env, SPVM_OBJECT* exception, const char* class_name, const char* method_name, int32_t line) {
-  
-  SPVM_RUNTIME_CLASS* class = SPVM_API_RUNTIME_get_class_by_name(env->runtime, class_name);
+SPVM_OBJECT* SPVM_API_new_stack_trace_raw(SPVM_ENV* env, SPVM_OBJECT* exception, int32_t method_id, int32_t line) {
+
+  SPVM_RUNTIME_METHOD* method = SPVM_API_RUNTIME_get_method(env->runtime, method_id);
+  const char* method_name = SPVM_API_RUNTIME_get_constant_string_value(env->runtime, method->name_id, NULL);
+  SPVM_RUNTIME_CLASS* class = SPVM_API_RUNTIME_get_class(env->runtime, method->class_id);
+  const char* class_name = SPVM_API_RUNTIME_get_constant_string_value(env->runtime, class->name_id, NULL);
+
   int32_t module_dir_id = class->module_dir_id;
   int32_t module_rel_file_id = class->module_rel_file_id;
   
@@ -5816,14 +5820,14 @@ SPVM_OBJECT* SPVM_API_new_stack_trace_raw(SPVM_ENV* env, SPVM_OBJECT* exception,
   return new_exception;
 }
 
-SPVM_OBJECT* SPVM_API_new_stack_trace(SPVM_ENV* env, SPVM_OBJECT* exception, const char* class_name, const char* method_name, int32_t line) {
+SPVM_OBJECT* SPVM_API_new_stack_trace(SPVM_ENV* env, SPVM_OBJECT* exception, int32_t method_id, int32_t line) {
   (void)env;
   
-  SPVM_OBJECT* str = SPVM_API_new_stack_trace_raw(env, exception, class_name, method_name, line);
+  SPVM_OBJECT* stack_trace = SPVM_API_new_stack_trace_raw(env, exception, method_id, line);
   
-  SPVM_API_push_mortal(env, str);
+  SPVM_API_push_mortal(env, stack_trace);
   
-  return str;
+  return stack_trace;
 }
 
 void SPVM_API_fprint(SPVM_ENV* env, FILE* fh, SPVM_OBJECT* string) {
